crates/plotnik-lib/tests/05-typegen/quantifiers/error_multi_element_sequence_no_captures.txt
Bad = {
  (identifier)
  (number)
}* @items
==== diagnostics ====
error: this `*` group matches several nodes but captures none of them
 --> query.ptk:1:7
  |
1 |   Bad = {
  |  _______^
2 | |   (identifier)
3 | |   (number)
4 | | }* @items
  | |__^
  |
help: add internal captures: `{(a) @a (b) @b}* @items`
